--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
+		
+		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
 
 	</head>
 
@@ -48,12 +50,8 @@
 			<iframe name="MainIframe" width="600" height="600"></iframe>
 
 			<footer>
-				<ul>
-					<li>Ce site est développé dans le cadre du cours INF2005 de l’UQAM.</li>
-					<li><a href="#">Pascal Aubé-Larouche</a> <a href="#">Jean Turgeon</a></li>
-					<li><a href="http://www.uqam.ca">UQAM</a></li> 
-					<li><a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a></li>
-				</ul>
+				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
+				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>				
 			</footer>
 		</div>
 	</body>
