Ajout du tableau d'employés et du logo dans le header des pages Bottin et ContactUs

--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -16,30 +16,22 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		
+		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
+		
 	</head>
 
 	<body>
 		<div>
 			<header>
-				<h1>page3</h1>
+				<a href="index.html"><img src="images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;"> </a>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
-			<div>
-
-			</div>
+			
+		
 
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
+				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>	
 			</footer>
 		</div>
 	</body>
