--- a/sections/directory.html
+++ b/sections/directory.html
@@ -16,28 +16,36 @@
 		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
 		<link rel="shortcut icon" href="/favicon.ico">
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		
+		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
+		
 	</head>
 
 	<body>
 		<div>
 			<header>
-				<h1>directory</h1>
+				<a href="index.html"><img src="images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;"></a>
+				<h1>Bottin</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
-			<div>
-
-			</div>
+			
+			<table>
+				<thead><th>Employé</th><th>Poste</th><th>Tél.</th></thead>
+				<tr><td><a href="#"> Suzanne Roussel</a></td><td>Directrice</td><td>514-555-1111</td></tr>
+				<tr><td><a href="#">Jean Turgeon</a></td><td>Responsable des produits</td><td>514-555-1122</td></tr>
+				<tr><td><a href="#">Pascal Aubé-Larouche</a></td><td>Webmestre</td><td>514-555-1123</td></tr>
+				<tr><td><a href="#">Sophie Parenteau</a></td><td>Comptable</td><td>514-555-2222</td></tr>
+				<tr><td><a href="#">Lucie Breton</a></td><td>Conseillère en voyages</td></tr>
+				<tr><td><a href="#">Simon Fecteau</a></td><td>Conseiller en voyages</td></tr>
+				<tr><td><a href="#">Alison Smythe</a></td><td>Conseillère en voyages</td></tr>
+				<tr><td><a href="#">Marie-France Despins</a></td><td>Conseillère en voyages</td></tr>
+				<tr><td><a href="#">Hugo Larivière</a></td><td>Conseiller en voyages</td></tr>
+			</table>
+			
+			
 
 			<footer>
-			
+				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
+				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>				
 			</footer>
 		</div>
 	</body>
