Ajout de contenu dans quelques pages.

--- a/sections/directory.html
+++ b/sections/directory.html
@@ -30,12 +30,12 @@
 			
 			<table>
 				<thead><th>Employé</th><th>Poste</th><th>Tél.</th></thead>
-				<tr><td><a href="#"> Suzanne Roussel</a></td><td>Directrice</td><td>514-555-1111</td></tr>
+				<tr><td><a href="#">Simon Fecteau</a></td><td>Directeur</td><td>514-555-1111</td></tr>
 				<tr><td><a href="#">Jean Turgeon</a></td><td>Responsable des produits</td><td>514-555-1122</td></tr>
 				<tr><td><a href="#">Pascal Aubé-Larouche</a></td><td>Webmestre</td><td>514-555-1123</td></tr>
 				<tr><td><a href="#">Sophie Parenteau</a></td><td>Comptable</td><td>514-555-2222</td></tr>
 				<tr><td><a href="#">Lucie Breton</a></td><td>Conseillère en voyages</td></tr>
-				<tr><td><a href="#">Simon Fecteau</a></td><td>Conseiller en voyages</td></tr>
+				<tr><td><a href="#">Suzanne Roussel</a></td><td>Conseillère en voyages</td></tr>
 				<tr><td><a href="#">Alison Smythe</a></td><td>Conseillère en voyages</td></tr>
 				<tr><td><a href="#">Marie-France Despins</a></td><td>Conseillère en voyages</td></tr>
 				<tr><td><a href="#">Hugo Larivière</a></td><td>Conseiller en voyages</td></tr>
