--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 			<h2>En vedette</h2>		
 			
 			<ul>
-				<li><a href="categories/products/product1.html">Le Meilleur de l'Europe</a></li>
-				<li><a href="categories/products/product2.html">Découverte de l'Amérique du Sud</a></li>
-				<li><a href="categories/products/product3.html">Safaris de rêve en Afrique</a></li>
-				<li><a href="categories/products/product4.html">Asie exotique</a></li>
-				<li><a href="categories/products/product5.html">Délices des Indes</a></li>
-				<li><a href="categories/products/product6.html">Horizons du Pacifique Sud</a></li>
+				<li><a href="categories/products/product1.html" target="MainIframe">Le Meilleur de l'Europe</a></li>
+				<li><a href="categories/products/product2.html" target="MainIframe">Découverte de l'Amérique du Sud</a></li>
+				<li><a href="categories/products/product3.html" target="MainIframe">Safaris de rêve en Afrique</a></li>
+				<li><a href="categories/products/product4.html" target="MainIframe">Asie exotique</a></li>
+				<li><a href="categories/products/product5.html" target="MainIframe">Délices des Indes</a></li>
+				<li><a href="categories/products/product6.html" target="MainIframe">Horizons du Pacifique Sud</a></li>
 			</ul>				
 				
 			<hr>
