--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -7,16 +7,10 @@
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>page3</title>
+		<title>Contact Us</title>
 		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-		
+		<meta name="viewport" content="width=device-width; initial-scale=1.0">		
 		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
 		
 	</head>
@@ -24,11 +18,17 @@
 	<body>
 		<div>
 			<header>
-				<a href="index.html"><img src="images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;"> </a>
+				<h1>Contact us</h1>
+				<img src="../images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;">
 			</header>
 			
-		
-
+			<div>
+				99 Washington Street   New York,  New York  10006   United-States
+				Reserve online or call us: 1 877 660 8550 
+			</div>
+			
+			
+			
 			<footer>
 				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
 				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>	
