--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>index</title>	
+		<title>Accueil</title>	
 		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
@@ -13,15 +13,17 @@
 
 	<body>
 			<header>
-				<img src="images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;">
-				<ul>
-					<li><a href="sections/manager.html" target="MainIframe">Directeur</a></li>
-					<li><a href="sections/contactus.html">Contact</a></li>
-					<li><a href="sections/directory.html">Bottin</a></li>
-					<li><a href="sections/connexion.html">Connexion</a></li>
-				</ul>
+				<div id="barreHorizontalMenuPrincipal">
+					<img id="logoMenuPrincipal"src="images/logo.png" alt="Voyage Plus PAL">
+						<ul id="menuPrincipal">
+							<li class="boutonMenuPrincipal"><a href="sections/manager.html" target="MainIframe">Directeur</a></li>
+							<li class="boutonMenuPrincipal"><a href="sections/contactus.html">Contact</a></li>
+							<li class="boutonMenuPrincipal"><a href="sections/directory.html">Bottin</a></li>
+							<li class="boutonMenuPrincipal"><a href="sections/connexion.html">Connexion</a></li>
+						</ul>
+				</div>
 			</header>
-		
+
 		<div>
 			<h2>En vedette</h2>		
 			
