--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>Accueil</title>	
+		<title>Accueil</title>
 		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
@@ -13,20 +13,24 @@
 
 	<body>
 			<header>
-				<div id="barreHorizontalMenuPrincipal">
-					<img id="logoMenuPrincipal"src="images/logo.png" alt="Voyage Plus PAL">
-						<ul id="menuPrincipal">
-							<li class="boutonMenuPrincipal"><a href="sections/manager.html" target="MainIframe">Directeur</a></li>
-							<li class="boutonMenuPrincipal"><a href="sections/contactus.html">Contact</a></li>
-							<li class="boutonMenuPrincipal"><a href="sections/directory.html">Bottin</a></li>
-							<li class="boutonMenuPrincipal"><a href="sections/connexion.html">Connexion</a></li>
-						</ul>
+				<div id="principalMenu">
+					<div id="principalMenuLeftSide">
+						<img id="principalMenuCompanyLogo"src="images/logo.png" alt="Voyage Plus PAL">
+						<h2 id="principalMenuCompanyName">Voyage Plus PAL</h1>
+					</div>
+					<div id="principalMenuMiddleSpace"></div>
+					<div>
+						<a class="principalMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a>
+						<a class="principalMenuButton" href="sections/contactus.html">Contact</a>
+						<a class="principalMenuButton" href="sections/directory.html">Bottin</a>
+						<a class="principalMenuButton" href="sections/connexion.html">Connexion</a>
+					</div>
+					<div id="principalMenuRightSpace"></div>
 				</div>
 			</header>
 
 		<div>
 			<h2>En vedette</h2>		
-			
 			<ul>
 				<li><a href="categories/products/product1.html" target="MainIframe">Le Meilleur de l'Europe</a></li>
 				<li><a href="categories/products/product2.html" target="MainIframe">Découverte de l'Amérique du Sud</a></li>
