Correction de pincipalMenu pour mainMenu. Ajout du ProduitPhare1

--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 
 	<body>
 			<header>
-				<div id="principalMenu">
-					<div id="principalMenuLeftSide">
-						<img id="principalMenuCompanyLogo"src="images/logo.png" alt="Voyage Plus PAL">
-						<h2 id="principalMenuCompanyName">Voyage Plus PAL</h1>
+				<div id="mainMenu">
+					<div id="mainMenuLeftSide">
+						<img id="mainMenuCompanyLogo"src="images/logo.png" alt="Voyage Plus PAL">
+						<h2 id="mainMenuCompanyName">Voyage Plus PAL</h1>
 					</div>
-					<div id="principalMenuMiddleSpace"></div>
+					<div id="mainMenuMiddleSpace"></div>
 					<div>
-						<a class="principalMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a>
-						<a class="principalMenuButton" href="sections/contactus.html">Contact</a>
-						<a class="principalMenuButton" href="sections/directory.html">Bottin</a>
-						<a class="principalMenuButton" href="sections/connexion.html">Connexion</a>
+						<a class="mainMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a>
+						<a class="mainMenuButton" href="sections/contactus.html">Contact</a>
+						<a class="mainMenuButton" href="sections/directory.html">Bottin</a>
+						<a class="mainMenuButton" href="sections/connexion.html">Connexion</a>
 					</div>
-					<div id="principalMenuRightSpace"></div>
+					<div id="mainMenuRightSpace"></div>
 				</div>
 			</header>
 
 		<div>
 			<h2>En vedette</h2>		
 			<ul>
-				<li><a href="categories/products/product1.html" target="MainIframe">Le Meilleur de l'Europe</a></li>
-				<li><a href="categories/products/product2.html" target="MainIframe">Découverte de l'Amérique du Sud</a></li>
-				<li><a href="categories/products/product3.html" target="MainIframe">Safaris de rêve en Afrique</a></li>
-				<li><a href="categories/products/product4.html" target="MainIframe">Asie exotique</a></li>
-				<li><a href="categories/products/product5.html" target="MainIframe">Délices des Indes</a></li>
-				<li><a href="categories/products/product6.html" target="MainIframe">Horizons du Pacifique Sud</a></li>
+				<li><a href="products/product1.html" target="MainIframe">Le Meilleur de l'Europe</a></li>
+				<li><a href="products/product2.html" target="MainIframe">Découverte de l'Amérique du Sud</a></li>
+				<li><a href="products/product3.html" target="MainIframe">Safaris de rêve en Afrique</a></li>
+				<li><a href="products/product4.html" target="MainIframe">Asie exotique</a></li>
+				<li><a href="products/product5.html" target="MainIframe">Délices des Indes</a></li>
+				<li><a href="products/product6.html" target="MainIframe">Horizons du Pacifique Sud</a></li>
 			</ul>				
 				
 			<hr>
