--- a/products/product1.html
+++ b/products/product1.html
@@ -2,18 +2,37 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>product1</title>
+		<title>Le Meilleur de l'Europe</title>
 	</head>
 	<body>
 			<header>
-				<h1>product1</h1>
+				<h1>Le Meilleur de l'Europe</h1>
 			</header>
-			
-
 			<div>
-
+				23 jours / 21 nuits
 			</div>
-
-
+			<div>
+				Visitez les incontournables du Vieux Continent dans ce périple de 23 jours qui vous permettra de découvrir les principaux attraits de la région. 
+				De la Catalogne à l'Autriche en passant par la Provence, ce circuit vous donnera l'occasion d'explorer les multiples facettes du meilleur de l'Europe.  
+			</div>
+			<div>
+				Barcelone • Montpellier • Nice • Florence • Rome • Vienne • Prague • Berlin • Amsterdam • Paris • Londres   
+			</div>
+			<div>
+				<h6>inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air Canada</li>
+					<li>Vol de Rome à Vienne avec Austrian</li>
+					<li>Train Thalys d'Amsterdam à Paris</li>
+					<li>Train Eurostar de Paris à Londres</li>
+					<li>Transport local en autocar de luxe</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>2 repas par jour</li>					
+				</ul>				
+			</div>
+			
+			<footer>
+				6499$ taxes incluses
+			</footer>
 	</body>
 </html>
