Ajout du texte pour tous les produits-phare

--- a/products/product1.html
+++ b/products/product1.html
@@ -19,10 +19,11 @@
 				Barcelone • Montpellier • Nice • Florence • Rome • Vienne • Prague • Berlin • Amsterdam • Paris • Londres   
 			</div>
 			<div>
-				<h6>inclusions</h6>
+				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air Canada</li>
 					<li>Vol de Rome à Vienne avec Austrian</li>
+					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>
 					<li>Train Thalys d'Amsterdam à Paris</li>
 					<li>Train Eurostar de Paris à Londres</li>
 					<li>Transport local en autocar de luxe</li>
