--- a/products/product2.html
+++ b/products/product2.html
@@ -2,45 +2,40 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>product2</title>
-		<meta name="description" content="">
-		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<title>Découverte de l'Amérique du Sud</title>
 	</head>
-
 	<body>
-		<div>
 			<header>
-				<h1>product2</h1>
+				<h1>Découverte de l'Amérique du Sud</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
 			<div>
-
+				21 jours / 19 nuits
 			</div>
-
+			<div>
+				Parfaite introduction au continent sud-américain, ce circuit est l'occasion idéale pour découvrir les
+				incontournables des quatre pays les plus célèbres de la région: le Pérou, le Chili, l'Argentine et le Brésil.
+				De plus, une croisière en Patagonie vous garantira un dépaysement inoubliable. 
+				 
+				  
+			</div>
+			<div>
+				Lima • Cuzco • Santiago • Punta Arenas • Ushuaia • Buenos Aires • Chutes d'Iguassu • Rio de Janeiro   
+			</div>
+			<div>
+				<h6>Inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec LATAM Airlines</li>
+					<li>Vols Lima-Cuzco-Santiago et Ushuaia-Buenos Aires-Iguassu-Rio de Janeiro</li>
+					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>
+					<li>Croisière de Punta Arenas à Ushuaia</li>					
+					<li>Transport local en autocar de luxe</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>2 repas par jour</li>					
+				</ul>				
+			</div>
+			
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				6875$ taxes incluses
 			</footer>
-		</div>
 	</body>
 </html>
