--- a/products/product3.html
+++ b/products/product3.html
@@ -2,45 +2,38 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>product3</title>
-		<meta name="description" content="">
-		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<title>Safaris de rêve en Afrique</title>
 	</head>
-
 	<body>
-		<div>
 			<header>
-				<h1>product3</h1>
+				<h1>Safaris de rêve en Afrique</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
 			<div>
-
+				21 jours / 19 nuits
 			</div>
-
+			<div>
+				Le rêve d'une vie est enfin à votre portée! Ce voyage inoubliable vous fera découvrir la mosaïque culturelle du pays
+				de Mandela, puis le célèbre train de luxe Shangololo vers la Namibie. Ensuite vous vous dirigerez vers le Kenya et
+				la Tanzanie, au coeur des plaines sauvages d'Afrique pour y observer les animaux dans les plus mythiques réserves fauniques. 				  
+			</div>
+			<div>
+				Cape Town • Johannesbourg • Windhoek • Nairobi • Lac Nakuru • Maasai Mara • Serengeti • Ngorongoro • Arusha    
+			</div>
+			<div>
+				<h6>Inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec KLM </li>
+					<li>Vols Windhoek-Nairo avec Kenya Airways </li>
+					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>
+					<li>Train Shangololo en première classe de Johannesbourg vers Windhoek</li>					
+					<li>Transport local en autocar de luxe et en jeep lors de safaris</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>3 repas par jour</li>					
+				</ul>				
+			</div>
+			
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				7850$ taxes incluses
 			</footer>
-		</div>
 	</body>
 </html>
