--- a/products/product5.html
+++ b/products/product5.html
@@ -2,45 +2,38 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>product5</title>
-		<meta name="description" content="">
-		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<title>Délices des Indes</title>
 	</head>
-
 	<body>
-		<div>
 			<header>
-				<h1>product5</h1>
+				<h1>Délices des Indes</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
 			<div>
-
+				23 jours / 21 nuits
 			</div>
-
+			<div>
+				Soyez éblouis par le spectre de tout ce que l'Inde a à offrir dans ce voyage somptueux au coeur du sous-continent, carrefour
+				culturel et historique qui pemet de découvrir un métissage unique de civilisations millénaires où le temps est suspendu. 
+				L'inde est résolumént entrée dans le 21e siècle sans jamais renier son patrimoine imposant. Le tout offre une destination
+				unique au monde d'où vous reviendrez transformés.				
+			</div>
+			<div>
+				Mumbai • Udaipur • Jodhpur • Jaisalmer • Jaipur • Chennai • Pondicherry • Kolkota • Kahujaro • Varanasi • Agra • New Delhi    
+			</div>
+			<div>
+				<h6>Inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Swiss</li>
+					<li>Vols Mumbai-Udaipur et Jaipur-Chennai-Kolkota-Kahujaro avec Jet Airways</li>
+					<li>Hébergement dans de luxe 5 étoiles</li>					
+					<li>Transport local en autocar de luxe</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>2 repas par jour</li>					
+				</ul>				
+			</div>
+			
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				6225$ taxes incluses
 			</footer>
-		</div>
 	</body>
 </html>
