--- a/products/product4.html
+++ b/products/product4.html
@@ -2,45 +2,40 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>product4</title>
-		<meta name="description" content="">
-		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<title>Asie exotique</title>
 	</head>
-
 	<body>
-		<div>
 			<header>
-				<h1>product4</h1>
+				<h1>Asie exotique</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
 			<div>
-
+				20 jours / 18 nuits
 			</div>
-
+			<div>
+				Parcourez les lieux les plus prisés d'Orient avec ce circuit qui inclus les visites des principales capitales  
+				d'Asie, de l'hyperactive Tokyo en passant par la chaotique Bangkok, ce voyage saura vous dépayser sans toutefois
+				renier au plus grand confort.
+				 				  
+			</div>
+			<div>
+				Tokyo • Beijing • Bangkok • Hanoi • Ho Chi Minh • Singapour • Bali • Hong Kong       
+			</div>
+			<div>
+				<h6>Inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air Canada </li>
+					<li>Vols Tokyo-Beijing-Bangkok avec Air China </li>
+					<li>Vols Bangkok-Hanoi et Ho Chi Minh-Singapour avec Vietnam Airlines </li>
+					<li>Vols Singapour-Bali-Honk Kong avec Garuda Airlines </li>
+					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>										
+					<li>Transport local en autocar de luxe</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>2 repas par jour</li>					
+				</ul>				
+			</div>
+			
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				5999$ taxes incluses
 			</footer>
-		</div>
 	</body>
 </html>
