--- a/products/product6.html
+++ b/products/product6.html
@@ -2,45 +2,35 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-		<title>product1</title>
-		<meta name="description" content="">
-		<meta name="author" content="Pascal Aubé-Larouche">
-
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-
-		<!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-		<link rel="shortcut icon" href="/favicon.ico">
-		<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+		<title>Horizons du Pacifique Sud</title>
 	</head>
-
 	<body>
-		<div>
 			<header>
-				<h1>product1</h1>
+				<h1>Horizons du Pacifique Sud</h1>
 			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
 			<div>
-
+				23 jours / 20 nuits
 			</div>
-
+			<div>
+				
+			</div>
+			<div>
+				Sydney • Cairns • Ayers Rock • Alice Springs • Melbourne • Auckland • Rotorua • Wellington • Christchurch • Queenstown • Fiji    
+			</div>
+			<div>
+				<h6>Inclusions</h6>
+				<ul>
+					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air New Zealand</li>
+					<li>Vols Sydney-Cairns-Ayers Rock et Alice Springs-Melbourne avec Qantas Airways</li>					
+					<li>Hébergement dans de luxe 5 étoiles</li>					
+					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>
+					<li>Visites avec guides francophones selon l'itinéraire</li>					
+					<li>Petit-déjeuner quotidien</li>					
+				</ul>				
+			</div>
+			
 			<footer>
-				<p>
-					&copy; Copyright  by Pascal Aubé-Larouche
-				</p>
+				6645$ taxes incluses
 			</footer>
-		</div>
 	</body>
 </html>
