Création de la page de connexion.

--- a/sections/connexionResults/dbProducts.html
+++ b/sections/connexionResults/dbProducts.html
@@ -8,5 +8,6 @@
 			<header>
 				<h1>Le produit a été enregistré avec succès</h1>
 			</header>
+			<a class="bouton" href="../connexion.html">Retourner à la page de connexion</a>
 	</body>
 </html>
