--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
+		<link rel="stylesheet" type="text/css" href="indexStyle.css">
 	</head>
 
 	<body>
