--- a/sections/connexion.html
+++ b/sections/connexion.html
@@ -3,28 +3,68 @@
 	<head>
 		<meta charset="utf-8">
 		<title>connexion</title>
+		<link rel="stylesheet" type="text/css" href="../connexionStyle.css">
 	</head>
 	<body>
-		<div>
-			<header>
-				<h1>connexion</h1>
-			</header>
-			<nav>
-				<p>
-					<a href="/">Home</a>
-				</p>
-				<p>
-					<a href="/contact">Contact</a>
-				</p>
-			</nav>
-
-			<div>
-
-			</div>
-
-			<footer>
-				
-			</footer>
-		</div>
+		<h4>Ajouter un produit</h4>
+		<form id="productForm" action="connexionResults/dbProducts.html">
+		<table>
+			<tr>
+				<td class="tableLabel">Nom:</td>
+				<td><input type="text" size="50" name="productName"></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Description:</td>
+				<td><textarea rows="4" cols="50" name="productDescription">Entrer une description ici...</textarea></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Image:</td>
+				<td><input type="file" name="productImage"  allow="text/*"></td>
+			</tr>
+			<tr rowspan="2">
+				<td colspan="2">
+					<div id="buttonsSection">
+						<input type="submit" form="productForm" value="Soumettre">
+		 				<input type="reset" form="productForm" value="Réinitialiser">
+		 			</div>
+				</td>
+			</tr>
+		</table>  
+		</form>
+		<HR>
+		<h4>Ajouter un employé</h4>
+		<form id="employeeForm" action="connexionResults/dbEmployees.html">
+		<table>
+			<tr>
+				<td class="tableLabel">Nom:</td>
+				<td><input type="text" size="50"></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Prénom:</td>
+				<td><input type="text" size="50"></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Courriel:</td>
+				<td><input type="email" size="50"></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Fonction:</td>
+				<td><input type="text" size="50"></td>
+			</tr>
+			<tr>
+				<td class="tableLabel">Photo:</td>
+				<td><input type="file" name="attachedfile"  allow="text/*"></td>
+			</tr>
+			
+			<tr rowspan="2">
+				<td colspan="2">
+					<div id="buttonsSection">
+						<input type="submit" form="employeeForm" value="Soumettre">
+		 				<input type="reset" form="employeeForm" value="Réinitialiser">
+		 			</div>
+				</td>
+			</tr>
+		</table>  
+		</form>	
 	</body>
 </html>
