--- a/sections/connexionResults/dbEmployees.html
+++ b/sections/connexionResults/dbEmployees.html
@@ -8,5 +8,6 @@
 			<header>
 				<h1>L'employé(e) a été enregistré(e) avec succès</h1>
 			</header>
+			<a class="bouton" href="../connexion.html">Retourner à la page de connexion</a>
 	</body>
 </html>
