--- a/sections/directory.html
+++ b/sections/directory.html
@@ -13,11 +13,11 @@
 				<tr><td><a href="#">Jean Turgeon</a></td><td>Responsable des produits</td><td>514-555-1122</td></tr>
 				<tr><td><a href="#">Pascal Aubé-Larouche</a></td><td>Webmestre</td><td>514-555-1123</td></tr>
 				<tr><td><a href="#">Sophie Parenteau</a></td><td>Comptable</td><td>514-555-2222</td></tr>
-				<tr><td><a href="#">Lucie Breton</a></td><td>Conseillère en voyages</td></tr>
-				<tr><td><a href="#">Suzanne Roussel</a></td><td>Conseillère en voyages</td></tr>
-				<tr><td><a href="#">Alison Smythe</a></td><td>Conseillère en voyages</td></tr>
-				<tr><td><a href="#">Marie-France Despins</a></td><td>Conseillère en voyages</td></tr>
-				<tr><td><a href="#">Hugo Larivière</a></td><td>Conseiller en voyages</td></tr>
+				<tr><td><a href="#">Lucie Breton</a></td><td>Conseillère en voyages</td><td>418-376-1379</td></tr>
+				<tr><td><a href="#">Suzanne Roussel</a></td><td>Conseillère en voyages</td><td>981-444-3432</td></tr>
+				<tr><td><a href="#">Alison Smythe</a></td><td>Conseillère en voyages</td><td>514-666-4355</td></tr>
+				<tr><td><a href="#">Marie-France Despins</a></td><td>Conseillère en voyages</td><td>514-234-8788</td></tr>
+				<tr><td><a href="#">Hugo Larivière</a></td><td>Conseiller en voyages</td><td>581-334-3219</td></tr>
 			</table>
 	</body>
 </html>
