Ajout de contenu pour categorie3

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<ul>							
 				<li><a href="categories/category1.html">Europe</a></li>
 				<li><a href="categories/category2.html">Amérique du Sud</a></li>
-				<li><a href="categories/category3.html">Afrique</a></li>
+				<li><a href="categories/category3.html">Afrique et Océan Indien</a></li>
 				<li><a href="categories/category4.html">Asie</a></li>
 				<li><a href="categories/category5.html">Moyen-Orient et Sous-continent Indien</a></li>
 				<li><a href="categories/category6.html">Pacifique Sud</a></li>				
