Changement au flexbox du menu

--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
 	<body>
 			<header>
 				<div id="mainMenu">
-					<div id="mainMenuLeftSide">
+					<div class="menuItem">
 						<img id="mainMenuCompanyLogo"src="images/logo.png" alt="Voyage Plus PAL">
 						<h2 id="mainMenuCompanyName">Voyage Plus PAL</h1>
 					</div>
-					<div id="mainMenuMiddleSpace"></div>
-					<div>
-						<a class="mainMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a>
-						<a class="mainMenuButton" href="sections/contactus.html">Contact</a>
-						<a class="mainMenuButton" href="sections/directory.html">Bottin</a>
-						<a class="mainMenuButton" href="sections/connexion.html">Connexion</a>
-					</div>
-					<div id="mainMenuRightSpace"></div>
+					<div class="menuItem"></div>
+					<div class="menuItem"><a class="mainMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a></div>
+					<div class="menuItem"><a class="mainMenuButton" href="sections/contactus.html">Contact</a></div>
+					<div class="menuItem"><a class="mainMenuButton" href="sections/directory.html">Bottin</a></div>
+					<div class="menuItem"><a class="mainMenuButton" href="sections/connexion.html">Connexion</a></div>
 				</div>
 			</header>
 
