--- a/index.html
+++ b/index.html
@@ -12,50 +12,39 @@
 	</head>
 
 	<body>
-			<header>
-				<div id="mainMenu">
-					<div class="menuItem">
-						<img id="mainMenuCompanyLogo"src="images/logo.png" alt="Voyage Plus PAL">
-						<h2 id="mainMenuCompanyName">Voyage Plus PAL</h1>
-					</div>
-					<div class="menuItem"></div>
-					<div class="menuItem"><a class="mainMenuButton" href="sections/manager.html" target="MainIframe">Directeur</a></div>
-					<div class="menuItem"><a class="mainMenuButton" href="sections/contactus.html">Contact</a></div>
-					<div class="menuItem"><a class="mainMenuButton" href="sections/directory.html">Bottin</a></div>
-					<div class="menuItem"><a class="mainMenuButton" href="sections/connexion.html">Connexion</a></div>
+				<div id="menu">
+					<a href="" class="item"><img src="images/logo.png" alt="Voyage Xpérience"></a>
+					<a href="" class="item"></a>
+					<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
+					<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
+					<a href="sections/directory.html" class="item" target="mainIframe">Bottin</a>
+					<a href="sections/connexion.html" class="item" target="mainIframe">Connexion</a>
 				</div>
-			</header>
+			
 
-		<div>
-			<h2>En vedette</h2>		
-			<ul>
-				<li><a href="products/product1.html" target="MainIframe">Le Meilleur de l'Europe</a></li>
-				<li><a href="products/product2.html" target="MainIframe">Découverte de l'Amérique du Sud</a></li>
-				<li><a href="products/product3.html" target="MainIframe">Safaris de rêve en Afrique</a></li>
-				<li><a href="products/product4.html" target="MainIframe">Asie exotique</a></li>
-				<li><a href="products/product5.html" target="MainIframe">Délices des Indes</a></li>
-				<li><a href="products/product6.html" target="MainIframe">Horizons du Pacifique Sud</a></li>
-			</ul>				
-				
+			<div id="list">
+				<p>En vedette</p>
+				<a href="products/product1.html" target="mainIframe">Le Meilleur de l'Europe</a><br>
+				<a href="products/product2.html" target="mainIframe">Découverte de l'Amérique du Sud</a><br>
+				<a href="products/product3.html" target="mainIframe">Safaris de rêve en Afrique</a><br>
+				<a href="products/product4.html" target="mainIframe">Asie exotique</a><br>
+				<a href="products/product5.html" target="mainIframe">Délices des Indes</a><br>
+				<a href="products/product6.html" target="mainIframe">Horizons du Pacifique Sud</a><br>		
 			<hr>
-			
-			<h2>Tous nos voyages</h2>
-			
-			<ul>							
-				<li><a href="categories/category1.html">Europe</a></li>
-				<li><a href="categories/category2.html">Amérique du Sud</a></li>
-				<li><a href="categories/category3.html">Afrique et Océan Indien</a></li>
-				<li><a href="categories/category4.html">Asie</a></li>
-				<li><a href="categories/category5.html">Moyen-Orient et Sous-continent Indien</a></li>
-				<li><a href="categories/category6.html">Pacifique Sud</a></li>				
-			</ul>
+				<p>Tous nos voyages</p>
+				<a href="categories/category1.html" target="mainIframe">Europe</a><br>
+				<a href="categories/category2.html" target="mainIframe">Amérique du Sud</a><br>
+				<a href="categories/category3.html" target="mainIframe">Afrique et Océan Indien</a><br>
+				<a href="categories/category4.html" target="mainIframe">Asie</a><br>
+				<a href="categories/category5.html" target="mainIframe">Moyen-Orient et Sous-continent Indien</a><br>
+				<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
+			</div>
 				
-			<iframe name="MainIframe" width="600" height="600"></iframe>
+			<iframe id="frame" name="mainIframe">Bienvenue</iframe>
 
 			<footer>
 				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
 				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>				
 			</footer>
-		</div>
 	</body>
 </html>
