Ajustement du CSS et corrections mineures

--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -7,9 +7,13 @@
 	</head>
 	<body>
 			<div>
-				<img src="../images/logo.png" alt="Voyage Plus PAL" style="width:304px;height:228px;">
-				99 Washington Street   New York,  New York  10006   United-States
-				Reserve online or call us: 1 877 660 8550 
+				<img src="../images/frog-949601_1280.jpg" alt="Voyage Plus PAL" style="width:304px;height:228px;">
+				<h1>Pour réserver: 1 800 555-1111</h1>
+				<address>
+				125 rue Deschamps <br>
+				Montréal (Québec)
+				H3R 1P8				 
+				</address>
 			</div>
 	</body>
 </html>
