--- a/products/product6.html
+++ b/products/product6.html
@@ -12,6 +12,10 @@
 				23 jours / 20 nuits
 			</div>
 			<div>
+				Partez à la conquête de l'Océanie, terres reculées et convoitées qui sont le rêve de plusieurs
+				voyageurs, notre circuit vous donnera l'opportunité d'explorer cette région du monde à votre guise.
+				Des métropoles australiennes aux plages de Fidji en passant par la Terre du Milieu, vous serez 
+				assurément émerveilé.
 				
 			</div>
 			<div>
