--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 				<div id="menu">
-					<a href="" class="item"><img src="images/logo.png" alt="Voyage Xpérience"></a>
+					<a href="" class="item"><img src="images/logo3.png" alt="Voyage Xpérience"></a>
 					<a href="" class="item"></a>
 					<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
 					<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
