Ajout de la fonte barmeno. CSS pour la page Directeur. CSS pour les pages Produits-phare

--- a/products/product1.html
+++ b/products/product1.html
@@ -3,22 +3,24 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Le Meilleur de l'Europe</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Le Meilleur de l'Europe</h1>
 			</header>
-			<div>
+			<div class="duration">
 				23 jours / 21 nuits
 			</div>
 			<div>
+				<img src="prodImages/jturgeon_rome_0508_44.jpg" />
 				Visitez les incontournables du Vieux Continent dans ce périple de 23 jours qui vous permettra de découvrir les principaux attraits de la région. 
 				De la Catalogne à l'Autriche en passant par la Provence, ce circuit vous donnera l'occasion d'explorer les multiples facettes du meilleur de l'Europe.  
 			</div>
-			<div>
+			<div class="citiesList">
 				Barcelone • Montpellier • Nice • Florence • Rome • Vienne • Prague • Berlin • Amsterdam • Paris • Londres   
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air Canada</li>
@@ -33,7 +35,7 @@
 			</div>
 			
 			<footer>
-				6499$ taxes incluses
+				<p class="price">6499$ <span class="taxes">taxes incluses</span> </p>
 			</footer>
 	</body>
 </html>
