--- a/sections/manager.html
+++ b/sections/manager.html
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Manager</title>
+		<link rel="stylesheet" type="text/css" href="../managerStyle.css" />
 	</head>
 
 	<body>
-				<img src="../images/logo.png" alt="Photo du directeur." style="width:304px;height:228px;">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum laoreet enim, sed ultrices ante aliquam ac. Vivamus interdum ligula at mollis finibus. Fusce venenatis sit amet urna in pretium. Phasellus pellentesque est sed ligula porttitor, sed lobortis lectus commodo. Vestibulum ex diam, luctus ut consequat ut, vestibulum non justo. Sed odio turpis, vulputate vel viverra quis, congue nec massa. Morbi sollicitudin gravida felis eu lobortis. Cras accumsan eget ligula sollicitudin tempus. Fusce quis suscipit ipsum. Aenean et accumsan urna. Nulla pulvinar orci eu ipsum tempor, ac mollis erat consequat.</p>
-				<p>Morbi congue ipsum ac ultricies egestas. Pellentesque purus erat, dapibus at venenatis eu, viverra in erat. Aliquam semper elit eget quam tincidunt, eu fermentum ligula consequat. Praesent ut magna imperdiet, sollicitudin orci et, consectetur lorem. Quisque rutrum eros imperdiet, elementum mi sit amet, rutrum libero. In at tortor at mi cursus porttitor a sed justo. Sed ornare est non fringilla porttitor. Proin dictum maximus dapibus. Nullam sagittis consectetur consectetur.</p>
-				<h1>Simon Fecteau</h1>
-				<img src="../images/logo.png" alt="Photo de la signature de simon." style="width:304px;height:228px;">
+		<div>
+			<img src="../images/manager-945438_1920.jpg" alt="Photo du directeur." >			
+			<p style="margin-top: -3px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum laoreet enim, sed ultrices ante aliquam ac. Vivamus interdum ligula at mollis finibus. Fusce venenatis sit amet urna in pretium. Phasellus pellentesque est sed ligula porttitor, sed lobortis lectus commodo. Vestibulum ex diam, luctus ut consequat ut, vestibulum non justo. Sed odio turpis, vulputate vel viverra quis, congue nec massa. Morbi sollicitudin gravida felis eu lobortis.</p>			
+			<p>Nullam egestas massa ligula, id elementum mauris interdum sed. Donec vel ultrices turpis, vitae pharetra felis. Donec eleifend consequat metus quis hendrerit. Aliquam blandit arcu scelerisque pellentesque vehicula. Quisque purus tortor, varius ut pulvinar non, placerat vitae neque. Aenean sagittis sagittis nunc, non consectetur nulla luctus in. Cras ut auctor ante, eget vulputate eros. Nullam sed cursus tellus, nec pretium felis. In convallis augue orci, vel rutrum elit varius in.</p>
+			<h2>Simon Fecteau</h1>
+		</div>				
 	</body>
 </html>
