Changements CSS pour categories et produits-phares

--- a/products/product2.html
+++ b/products/product2.html
@@ -3,25 +3,27 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Découverte de l'Amérique du Sud</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Découverte de l'Amérique du Sud</h1>
 			</header>
-			<div>
+			<div class="duration">
 				21 jours / 19 nuits
 			</div>
 			<div>
+				<img src="prodImages/lighthouse-530049_1280.jpg" />
 				Parfaite introduction au continent sud-américain, ce circuit est l'occasion idéale pour découvrir les
 				incontournables des quatre pays les plus célèbres de la région: le Pérou, le Chili, l'Argentine et le Brésil.
 				De plus, une croisière en Patagonie vous garantira un dépaysement inoubliable. 
 				 
 				  
 			</div>
-			<div>
+			<div class="citiesList">
 				Lima • Cuzco • Santiago • Punta Arenas • Ushuaia • Buenos Aires • Chutes d'Iguassu • Rio de Janeiro   
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec LATAM Airlines</li>
@@ -34,8 +36,7 @@
 				</ul>				
 			</div>
 			
-			<footer>
-				6875$ taxes incluses
-			</footer>
+			<footer >
+				<p class="price">6875$ <span>taxes incluses</span></p></footer>
 	</body>
 </html>
