--- a/products/product3.html
+++ b/products/product3.html
@@ -3,23 +3,25 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Safaris de rêve en Afrique</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Safaris de rêve en Afrique</h1>
 			</header>
-			<div>
+			<div class="duration">
 				21 jours / 19 nuits
 			</div>
 			<div>
+				<img src="prodImages/lion-794962_1280.jpg" />
 				Le rêve d'une vie est enfin à votre portée! Ce voyage inoubliable vous fera découvrir la mosaïque culturelle du pays
 				de Mandela, puis le célèbre train de luxe Shangololo vers la Namibie. Ensuite vous vous dirigerez vers le Kenya et
 				la Tanzanie, au coeur des plaines sauvages d'Afrique pour y observer les animaux dans les plus mythiques réserves fauniques. 				  
 			</div>
-			<div>
+			<div class="citiesList">
 				Cape Town • Johannesbourg • Windhoek • Nairobi • Lac Nakuru • Maasai Mara • Serengeti • Ngorongoro • Arusha    
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec KLM </li>
@@ -33,7 +35,7 @@
 			</div>
 			
 			<footer>
-				7850$ taxes incluses
+				<p class="price">7850$ <span>taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
