--- a/products/product4.html
+++ b/products/product4.html
@@ -3,24 +3,26 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Asie exotique</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Asie exotique</h1>
 			</header>
-			<div>
+			<div class="duration">
 				20 jours / 18 nuits
 			</div>
 			<div>
+				<img src="prodImages/great-wall-of-china-814143_1280.jpg" />
 				Parcourez les lieux les plus prisés d'Orient avec ce circuit qui inclus les visites des principales capitales  
 				d'Asie, de l'hyperactive Tokyo en passant par la chaotique Bangkok, ce voyage saura vous dépayser sans toutefois
 				renier au plus grand confort.
 				 				  
 			</div>
-			<div>
+			<div class="citiesList">
 				Tokyo • Beijing • Bangkok • Hanoi • Ho Chi Minh • Singapour • Bali • Hong Kong       
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air Canada </li>
@@ -35,7 +37,7 @@
 			</div>
 			
 			<footer>
-				5999$ taxes incluses
+				<p class="price">5999$ <span>taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
