--- a/products/product5.html
+++ b/products/product5.html
@@ -3,24 +3,26 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Délices des Indes</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Délices des Indes</h1>
 			</header>
-			<div>
+			<div class="duration">
 				23 jours / 21 nuits
 			</div>
 			<div>
+				<img src="prodImages/jturgeon_INDIA_0208_092.jpg">
 				Soyez éblouis par le spectre de tout ce que l'Inde a à offrir dans ce voyage somptueux au coeur du sous-continent, carrefour
 				culturel et historique qui pemet de découvrir un métissage unique de civilisations millénaires où le temps est suspendu. 
 				L'inde est résolumént entrée dans le 21e siècle sans jamais renier son patrimoine imposant. Le tout offre une destination
 				unique au monde d'où vous reviendrez transformés.				
 			</div>
-			<div>
+			<div class="citiesList">
 				Mumbai • Udaipur • Jodhpur • Jaisalmer • Jaipur • Chennai • Pondicherry • Kolkota • Kahujaro • Varanasi • Agra • New Delhi    
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Swiss</li>
@@ -33,7 +35,7 @@
 			</div>
 			
 			<footer>
-				6225$ taxes incluses
+				<p class="price">6225$ <span>taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
