--- a/products/product6.html
+++ b/products/product6.html
@@ -3,25 +3,27 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Horizons du Pacifique Sud</title>
+		<link rel="stylesheet" type="text/css" href="prodStyle.css" />
 	</head>
 	<body>
 			<header>
 				<h1>Horizons du Pacifique Sud</h1>
 			</header>
-			<div>
+			<div class="duration">
 				23 jours / 20 nuits
 			</div>
 			<div>
+				<img src="prodImages/ayers-rock-587828_1280.jpg" />
 				Partez à la conquête de l'Océanie, terres reculées et convoitées qui sont le rêve de plusieurs
 				voyageurs, notre circuit vous donnera l'opportunité d'explorer cette région du monde à votre guise.
 				Des métropoles australiennes aux plages de Fidji en passant par la Terre du Milieu, vous serez 
 				assurément émerveilé.
 				
 			</div>
-			<div>
+			<div class="citiesList">
 				Sydney • Cairns • Ayers Rock • Alice Springs • Melbourne • Auckland • Rotorua • Wellington • Christchurch • Queenstown • Fiji    
 			</div>
-			<div>
+			<div class="inclusions">
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec Air New Zealand</li>
@@ -34,7 +36,7 @@
 			</div>
 			
 			<footer>
-				6645$ taxes incluses
+				<p class="price">6645$ <span>taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
