Ajustement de la page du bottin (Partie 1)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<a href="" class="item"></a>
 					<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
 					<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
-					<a href="sections/directory.html" class="item" target="mainIframe">Bottin</a>
+					<a href="sections/directory.html" class="item" target="_self">Bottin</a>
 					<a href="sections/connexion.html" class="item" target="mainIframe">Connexion</a>
 				</div>
 			
@@ -40,11 +40,11 @@
 				<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
 			</div>
 				
-			<iframe id="frame" name="mainIframe">Bienvenue</iframe>
+			<iframe id="frame" name="mainIframe" src="products/product1.html">Bienvenue</iframe>
 
 			<footer>
-				Ce site est développé par <a href="#">Pascal Aubé-Larouche</a> et <a href="#">Jean Turgeon</a> dans le cadre du cours 
-				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a>				
+				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
+				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a></div>
 			</footer>
 	</body>
 </html>
