--- a/sections/connexionResults/dbProducts.html
+++ b/sections/connexionResults/dbProducts.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 			<header>
-				<h1>Le produit a été enregistré avec succès</h1>
+				<h1>Produit enregistré</h1>
 			</header>
 			<a class="bouton" href="../connexion.html">Retourner à la page de connexion</a>
 	</body>
