--- a/sections/connexion.html
+++ b/sections/connexion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>connexion</title>
+		<title>Connexion</title>
 		<link rel="stylesheet" type="text/css" href="../connexionStyle.css">
 	</head>
 	<body>
