--- a/sections/connexionResults/dbEmployees.html
+++ b/sections/connexionResults/dbEmployees.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 			<header>
-				<h1>L'employé(e) a été enregistré(e) avec succès</h1>
+				<h1>Employé enregistré</h1>
 			</header>
 			<a class="bouton" href="../connexion.html">Retourner à la page de connexion</a>
 	</body>
