--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -9,6 +9,9 @@
 			<div>
 				<img src="../images/frog-949601_1280.jpg" alt="Voyage Plus PAL" style="width:304px;height:228px;">
 				<h1>Pour réserver: 1 800 555-1111</h1>
+				<a href="mailto:voyages@xperience.com">voyages@xperience.com</a>
+				<br>
+				<br>
 				<address>
 				125 rue Deschamps <br>
 				Montréal (Québec)
