Implantation du schéma de couleur. Phase 1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			
 
 			<div id="list">
-				<p>En vedette</p>
+				<h3>En vedette</h3>
 				<a href="products/product1.html" target="mainIframe">Le Meilleur de l'Europe</a><br>
 				<a href="products/product2.html" target="mainIframe">Découverte de l'Amérique du Sud</a><br>
 				<a href="products/product3.html" target="mainIframe">Safaris de rêve en Afrique</a><br>
@@ -31,7 +31,7 @@
 				<a href="products/product5.html" target="mainIframe">Délices des Indes</a><br>
 				<a href="products/product6.html" target="mainIframe">Horizons du Pacifique Sud</a><br>		
 			<hr>
-				<p>Tous nos voyages</p>
+				<h3>Tous nos voyages</h3>
 				<a href="categories/category1.html" target="mainIframe">Europe</a><br>
 				<a href="categories/category2.html" target="mainIframe">Amérique du Sud</a><br>
 				<a href="categories/category3.html" target="mainIframe">Afrique et Océan Indien</a><br>
