--- a/products/product3.html
+++ b/products/product3.html
@@ -35,7 +35,7 @@
 			</div>
 			
 			<footer>
-				<p class="price">7850$ <span>taxes incluses</span></p>
+				<p class="price">7850$ <span class="taxes">taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
