--- a/products/product6.html
+++ b/products/product6.html
@@ -21,7 +21,7 @@
 				
 			</div>
 			<div class="citiesList">
-				Sydney • Cairns • Ayers Rock • Alice Springs • Melbourne • Auckland • Rotorua • Wellington • Christchurch • Queenstown • Fiji    
+				Sydney • Cairns • Ayers Rock • Alice Springs • Melbourne • Auckland • Rotorua • Wellington • Christchurch • Queenstown • Fidji    
 			</div>
 			<div class="inclusions">
 				<h6>Inclusions</h6>
@@ -36,7 +36,7 @@
 			</div>
 			
 			<footer>
-				<p class="price">6645$ <span>taxes incluses</span></p>
+				<p class="price">6645$ <span class="taxes">taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
