Ajustement bottin, contactez-nous

--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -3,20 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Contact Us</title>		
-		<link rel="stylesheet" type="text/css" href="styleGeneral.css">
+		<link rel="stylesheet" type="text/css" href="../contactusStyle.css">
 	</head>
 	<body>
-			<div>
-				<img src="../images/frog-949601_1280.jpg" alt="Voyage Plus PAL" style="width:304px;height:228px;">
-				<h1>Pour réserver: 1 800 555-1111</h1>
+			<div id="contactInfo">
+				<h1><div>Pour réserver: </div><div>1 800 555-1111</div></h1>
 				<a href="mailto:voyages@xperience.com">voyages@xperience.com</a>
-				<br>
-				<br>
+				<br><br>
 				<address>
-				125 rue Deschamps <br>
-				Montréal (Québec)
-				H3R 1P8				 
+					125 rue Deschamps <br>
+					Montréal (Québec)
+					H3R 1P8				 
 				</address>
+			</div>
+			<div id="contactLogo">
+				<img src="../images/frog-949601_1280.jpg" alt="Voyage Plus PAL" style="width:304px;height:228px;">
 			</div>
 	</body>
 </html>
