CSS pour categories et produits-phares

--- a/products/product1.html
+++ b/products/product1.html
@@ -35,7 +35,7 @@
 			</div>
 			
 			<footer>
-				<p class="price">6499$ <span class="taxes">taxes incluses</span> </p>
+				<p><div class="price">6499$</div> <span class="taxes">taxes incluses</span> </p>
 			</footer>
 	</body>
 </html>
