--- a/products/product2.html
+++ b/products/product2.html
@@ -37,6 +37,6 @@
 			</div>
 			
 			<footer >
-				<p class="price">6875$ <span class="taxes">taxes incluses</span></p></footer>
+				<p><div class="price">6875$</div><span class="taxes"> taxes incluses</span></p></footer>
 	</body>
 </html>
