--- a/products/product4.html
+++ b/products/product4.html
@@ -37,7 +37,7 @@
 			</div>
 			
 			<footer>
-				<p class="price">5999$ <span class="taxes">taxes incluses</span></p>
+				<p><div class="price">5999$</div><span class="taxes"> taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
