--- a/products/product6.html
+++ b/products/product6.html
@@ -36,7 +36,7 @@
 			</div>
 			
 			<footer>
-				<p class="price">6645$ <span class="taxes">taxes incluses</span></p>
+				<p> <div class="price">6645$</div><span class="taxes"> taxes incluses</span></p>
 			</footer>
 	</body>
 </html>
