Ajustement dans le style (Partie 1)

--- a/index.html
+++ b/index.html
@@ -8,40 +8,38 @@
 		<meta name="description" content="">
 		<meta name="author" content="Pascal Aubé-Larouche et Jean Turgeon">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="indexStyle.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 	</head>
 
 	<body>
-				<div id="menu">
-					<a href="" class="item"><img src="images/logo3.png" alt="Voyage Xpérience"></a>
-					<a href="" class="item"></a>
-					<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
-					<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
-					<a href="sections/directory.html" class="item" target="_self">Bottin</a>
-					<a href="sections/connexion.html" class="item" target="mainIframe">Connexion</a>
-				</div>
-			
-
-			<div id="list">
-				<h3>En vedette</h3>
-				<a href="products/product1.html" target="mainIframe">Le Meilleur de l'Europe</a><br>
-				<a href="products/product2.html" target="mainIframe">Découverte de l'Amérique du Sud</a><br>
-				<a href="products/product3.html" target="mainIframe">Safaris de rêve en Afrique</a><br>
-				<a href="products/product4.html" target="mainIframe">Asie exotique</a><br>
-				<a href="products/product5.html" target="mainIframe">Délices des Indes</a><br>
-				<a href="products/product6.html" target="mainIframe">Horizons du Pacifique Sud</a><br>		
-			<hr>
-				<h3>Tous nos voyages</h3>
-				<a href="categories/category1.html" target="mainIframe">Europe</a><br>
-				<a href="categories/category2.html" target="mainIframe">Amérique du Sud</a><br>
-				<a href="categories/category3.html" target="mainIframe">Afrique et Océan Indien</a><br>
-				<a href="categories/category4.html" target="mainIframe">Asie</a><br>
-				<a href="categories/category5.html" target="mainIframe">Moyen-Orient et Sous-continent Indien</a><br>
-				<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
+			<div id="menu">
+				<a href="" class="item"><img src="images/logo3.png" alt="Voyage Xpérience"></a>
+				<a href="" class="item"></a>
+				<a href="sections/manager.html" class="item" target="mainIframe">Directeur</a>
+				<a href="sections/contactus.html" class="item" target="mainIframe">Contact</a>
+				<a href="sections/directory.html" class="item" target="_self">Bottin</a>
+				<a href="sections/connexion.html" class="item" target="_self">Connexion</a>
 			</div>
-				
-			<iframe id="frame" name="mainIframe" src="products/product1.html">Bienvenue</iframe>
-
+			<div id="centre">
+				<div id="list">
+					<h3>En vedette</h3>
+					<a href="products/product1.html" target="mainIframe">Le Meilleur de l'Europe</a><br>
+					<a href="products/product2.html" target="mainIframe">Découverte de l'Amérique du Sud</a><br>
+					<a href="products/product3.html" target="mainIframe">Safaris de rêve en Afrique</a><br>
+					<a href="products/product4.html" target="mainIframe">Asie exotique</a><br>
+					<a href="products/product5.html" target="mainIframe">Délices des Indes</a><br>
+					<a href="products/product6.html" target="mainIframe">Horizons du Pacifique Sud</a><br>		
+				<hr>
+					<h3>Tous nos voyages</h3>
+					<a href="categories/category1.html" target="mainIframe">Europe</a><br>
+					<a href="categories/category2.html" target="mainIframe">Amérique du Sud</a><br>
+					<a href="categories/category3.html" target="mainIframe">Afrique et Océan Indien</a><br>
+					<a href="categories/category4.html" target="mainIframe">Asie</a><br>
+					<a href="categories/category5.html" target="mainIframe">Moyen-Orient et Sous-continent Indien</a><br>
+					<a href="categories/category6.html" target="mainIframe">Pacifique Sud</a><br>	
+				</div>
+				<iframe id="frame" name="mainIframe" src="products/product1.html">Bienvenue</iframe>
+			</div>
 			<footer>
 				<div>Ce site est développé par <a href="mailto:pascalaubelarouche@voyagesxperience.com?subject=Voyages Xpérience">Pascal Aubé-Larouche</a> et <a href="mailto:jeanturgeon@voyagesxperience.com?subject=Voyages Xpérience">Jean Turgeon</a> dans le cadre du cours 
 				<a href="http://www.etudier.uqam.ca/cours?sigle=INF2005">INF2005</a> à <a href="http://www.uqam.ca">l'UQAM</a></div>
