--- a/sections/connexion.html
+++ b/sections/connexion.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Connexion</title>
-		<link rel="stylesheet" type="text/css" href="../connexionStyle.css">
+		<link rel="stylesheet" type="text/css" href="../connexion.css">
 	</head>
 	<body>
 		<div id="menu">
