--- a/sections/connexionResults/dbProducts.html
+++ b/sections/connexionResults/dbProducts.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Produit enregistré.</title>
+		<link rel="stylesheet" type="text/css" href="design.css">
 	</head>
 	<body>
 			<header>
