--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Contact Us</title>		
-		<link rel="stylesheet" type="text/css" href="../contactusStyle.css">
+		<link rel="stylesheet" type="text/css" href="../contactus.css">
 	</head>
 	<body>
 			<div id="contactInfo">
