--- a/sections/directory.html
+++ b/sections/directory.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Directory</title>
-		<link rel="stylesheet" type="text/css" href="../directoryStyle.css">
+		<link rel="stylesheet" type="text/css" href="../directory.css">
 	</head>
 
 	<body>
