--- a/sections/manager.html
+++ b/sections/manager.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Manager</title>
-		<link rel="stylesheet" type="text/css" href="../managerStyle.css" />
+		<link rel="stylesheet" type="text/css" href="../manager.css" />
+		<link rel="stylesheet" type="text/css" href="design.css">
 	</head>
 
 	<body>
@@ -11,7 +12,7 @@
 			<img src="../images/manager-945438_1920.jpg" alt="Photo du directeur." >			
 			<p style="margin-top: -3px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum laoreet enim, sed ultrices ante aliquam ac. Vivamus interdum ligula at mollis finibus. Fusce venenatis sit amet urna in pretium. Phasellus pellentesque est sed ligula porttitor, sed lobortis lectus commodo. Vestibulum ex diam, luctus ut consequat ut, vestibulum non justo. Sed odio turpis, vulputate vel viverra quis, congue nec massa. Morbi sollicitudin gravida felis eu lobortis.</p>			
 			<p>Nullam egestas massa ligula, id elementum mauris interdum sed. Donec vel ultrices turpis, vitae pharetra felis. Donec eleifend consequat metus quis hendrerit. Aliquam blandit arcu scelerisque pellentesque vehicula. Quisque purus tortor, varius ut pulvinar non, placerat vitae neque. Aenean sagittis sagittis nunc, non consectetur nulla luctus in. Cras ut auctor ante, eget vulputate eros. Nullam sed cursus tellus, nec pretium felis. In convallis augue orci, vel rutrum elit varius in.</p>
-			<h2>Simon Fecteau</h1>
+			<div id="signature">Simon Fecteau</div>
 		</div>				
 	</body>
 </html>
