Derniers ajustements suite au premier tour du site avec Jean

--- a/products/product3.html
+++ b/products/product3.html
@@ -25,7 +25,7 @@
 				<h6>Inclusions</h6>
 				<ul>
 					<li>Vols internationaux au départ de Montréal, Québec ou Ottawa avec KLM </li>
-					<li>Vols Windhoek-Nairo avec Kenya Airways </li>
+					<li>Vols Windhoek-Nairobi avec Kenya Airways </li>
 					<li>Hébergement dans des hôtels 4 et 5 étoiles</li>
 					<li>Train Shangololo en première classe de Johannesbourg vers Windhoek</li>					
 					<li>Transport local en autocar de luxe et en jeep lors de safaris</li>
