--- a/sections/contactus.html
+++ b/sections/contactus.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 			<div id="contactInfo">
-				<h1><div>Pour réserver: </div><div>1 800 555-1111</div></h1>
+				<h1><div>Pour réserver: </div><div id="phone">1 800 555-1111</div></h1>
 				<a href="mailto:voyages@xperience.com">voyages@xperience.com</a>
 				<br><br>
 				<address>
