--- a/sections/directory.html
+++ b/sections/directory.html
@@ -16,7 +16,8 @@
 			
 			<div id="centre">
 			<table>
-				<thead><th>Employé</th><th>Poste</th><th>Tél.</th></thead>
+				<thead><tr><th>Employé</th><th>Poste</th><th>Tél.</th></tr></thead>
+				<tbody>
 				<tr><td><a href="mailto:simonfecteau@voyagesxperience.com">Simon Fecteau</a></td><td>Directeur</td><td>514-555-1111</td></tr>
 				<tr><td><a href="mailto:jeanturgeon@voyagesxperience.com">Jean Turgeon</a></td><td>Responsable des produits</td><td>514-555-1122</td></tr>
 				<tr><td><a href="mailto:pascalaubelarouche@voyagesxperience.com">Pascal Aubé-Larouche</a></td><td>Webmestre</td><td>514-555-1123</td></tr>
@@ -26,6 +27,7 @@
 				<tr><td><a href="mailto:alissonsmythe@voyagesxperience.com">Alison Smythe</a></td><td>Conseillère en voyages</td><td>514-666-4355</td></tr>
 				<tr><td><a href="mailto:mariefrancedespins@voyagesxperience.com">Marie-France Despins</a></td><td>Conseillère en voyages</td><td>514-234-8788</td></tr>
 				<tr><td><a href="mailto:hugolariviere@voyagesxperience.com">Hugo Larivière</a></td><td>Conseiller en voyages</td><td>581-334-3219</td></tr>
+				</tbody>
 			</table>
 			</div>
 			<footer>
